--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,6 @@
   </head>
 
   <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view ui-sref="home"></ion-nav-view>
   </body>
 </html>
